--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </div>
         </div>
         <div class="footer__bar">
-          Copyright © 2024 Web Design Mastery. All rights reserved.
+          Copyright © Raksha. All rights reserved.
         </div>
       </footer>
   
